--- a/semi/bin/src/main/resources/static/css/join.css
+++ b/semi/bin/src/main/resources/static/css/join.css
@@ -10,14 +10,7 @@
 */
 
 
-/*
-    모든 홈페이지의 화면은 N줄 1칸 형태라고 생각한다
-    필요한 태그는 외부 div와 내부 div 두 가지이다.
 
-    - div는 기본적으로 폭이 100%이므로 원하는 크기로 변경해야함
-
-    (주의) reset.css로 이동하였으므로 향후 제거해야함
-*/
 * {
     box-sizing: border-box;
     font-family: '빙그레 메로나체';
@@ -80,16 +73,17 @@
 */
 .form-input {
     font-size: 20px;
+    color : black;
     padding: 0.5em;
     outline: none;/*선택 시 강조 효과 제거*/
-    border: 1px solid #636e72;
-    border-radius: 0.1em;
+    border: 1px solid lightgray;
+    border-radius: 0.5em;
 }
 .form-input:focus {/*커서가 위치했을 때*/
-    border-color: black;
+    border-color: gray;
 }
 input.form-input, select.form-input, .form-btn {
-    height:2.5em;
+    height:2.3em;
 }
 
 /*
@@ -119,11 +113,11 @@ input[type=file].form-input {
     - 중립 버튼은 흑백 계열
 */
 .form-btn {
-    font-size: 20px;
+    font-size: 18px;
     padding: 0.5em;
     border-width: 1px;
     border-style: solid;
-    border-radius: 0.1em;
+    border-radius: 0.5em;
     cursor: pointer;
 }
 
@@ -142,8 +136,8 @@ a.form-btn {
 /* 버튼 스타일 */
 /*.form-btn과 .positive가 같이 있으면*/
 .form-btn.positive {
-    background-color: #0984e3;
-    border-color: #0984e3;
+    background-color: rgb(64, 165, 187);
+    border-color: rgb(64, 165, 187);
     color: white;
 }
 .form-btn.negative {
@@ -203,7 +197,6 @@ a.form-btn {
 .mv-40 { margin:40px 0; }
 .mv-50 { margin:50px 0; }
 
-.mt-5 { margin-top: 5px; }
 .mt-10 { margin-top: 10px; }
 .mt-20 { margin-top: 20px; }
 .mt-30 { margin-top: 30px; }
@@ -265,6 +258,7 @@ a.form-btn {
 */
 .form-label {
     display: inline-block;
+    color: gray;
 }
 
 /*
@@ -272,141 +266,6 @@ a.form-btn {
     서브 클래스를 지정
     - .table-border : 테두리 구현
 */
-
-.table {
-    width:100%;
-    border-spacing: 0;
-}
-/* 
-    이렇게 만들면 테이블이 중첩되는 경우 내부 테이블까지 영향을 미침
-    .table th,
-    .table td 
-*/
-.table > thead > tr > th, 
-.table > thead > tr > td, 
-.table > tbody > tr > th, 
-.table > tbody > tr > td, 
-.table > tfoot > tr > th, 
-.table > tfoot > tr > td
-{
-    padding: 0.5em;
-}
-
-/* 
-    테두리 부여 서브 스타일 
-    - 테이블과 칸에 테두리를 부여하고 border-collapse 설정
-*/
-.table.table-border {
-    border-collapse: collapse;
-}
-
-.table.table-border,
-.table.table-border > thead > tr > th,
-.table.table-border > thead > tr > td,
-.table.table-border > tbody > tr > th,
-.table.table-border > tbody > tr > td,
-.table.table-border > tfoot > tr > th,
-.table.table-border > tfoot > tr > td
-{
-    border: 1px solid #636e72;
-}
-
-/*
-    hover 서브 스타일
-*/
-.table.table-hover > tbody > tr:hover {
-    background-color: black;
-    color: white;
-}
-
-/*
-    striped 서브 스타일
-    - :first-child 는 첫번째 항목을 의미
-    - :nth-child(1) 는 1번째 항목을 의미
-    - :nth-child(2n) 는 n=1,2,3,...로 변화할 때 해당 순서를 선택
-*/
-.table.table-striped > thead > tr,
-.table.table-striped > tfoot > tr,
-.table.table-striped > tbody > tr:nth-child(2n) {
-    background-color: black;
-    color: white;
-}
-
-/*
-    slit 테이블 서브스타일
-*/
-.table.table-slit {
-    border-collapse: collapse;
-    border-top: 4px black double;
-    border-bottom: 4px black double;
-}
-.table.table-slit > thead {
-    border-bottom: 4px black double;
-}
-.table.table-slit > tfoot {
-    border-top: 4px black double;
-}
-/* 
-    마지막 줄은 제외하고 하려면 :not(선택자)를 붙인다
-*/
-.table.table-slit > tbody > tr:not(:last-child) {
-    border-bottom: 1px black dotted;
-}
-
-/*
-    링크 스타일
-*/
-a.link {
-    color: #2d3436;
-    text-decoration: none;
-}
-a.link:hover {
-    color: #d63031;
-}
-
-/*
-    페이지네이션(Pagination) 디자인
-    - a 태그에 폭 설정이 불가능하므로 display를 변경(inline-block)
-    - 활성화 상태를 .on으로 정의하고 :hover와 동일하게 처리
-
-    (주의)
-    border는 폭,높이에 영향을 미치므로 추가/제거가 반복될 경우
-    투명 테두리를 설정해둬야 한다
-
-    대안으로는 그림자(box-shadow)를 사용하는 방법이 있다
-
-    box-shadow: x위치 y위치 번짐 퍼짐 색상;
-*/
-.pagination {
-    text-align: center;
-}
-.pagination > a {
-    display: inline-block;
-
-    color: black;
-    text-decoration: none;
-
-    font-size: 16px;
-
-    min-width: 3em;
-    height: 3em;
-    padding: 1em;
-
-    text-align: center;
-
-    /*border: 1px solid transparent;*/
-}
-.pagination > a.on,
-.pagination > a:hover:not(.disabled) {
-    /*border-color: black;*/
-    color:red;
-    font-weight: bold;
-    box-shadow: 0px 0px 0px 1px black;
-}
-
-.pagination > a.disabled {
-	cursor: not-allowed;
-}
 
 /*
     이미지를 표시하는 방법
@@ -463,169 +322,6 @@ input.form-input.form-input-bg {
     padding-left: 2.5em;
 }
 
-/* 
-    (참고) 
-    z-index가 없어도 fixed가 가장 높게 나온다 
-    opacity는 내부의 모든 항목의 불투명도를 조절
-    일반적으로 전체화면에서는 background-color로 불투명도를 조절
-*/
-.fullscreen {
-    background-color: rgba(0, 0, 0, 0.2);
-    /*
-    background-color: black;
-    opacity: 0.2; 
-    */
-
-    position: fixed;
-
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    z-index: 99999;
-}
-
-.fullscreen > .fullscreen-container {
-    /* background-color: white; */
-    /*
-    background-image: url("./image/loading.gif");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: left top;
-    */
-
-    /* 폭 높이는 사용할 파일에서 설정 */
-    /* 
-    width:100px;
-    height:100px; 
-    */
-
-    position: absolute;
-
-    top:50%;
-    left:50%;
-    
-    /*
-    가운데 배치하는 방법
-    크기의 절반만큼 반대 방향으로 이동시킨다
-    1. margin 사용
-        - 장점 : 안되는 브라우저가 없음
-        - 단점 : 크기를 알아야 함
-
-        margin-left: -150px;
-        margin-top: -200px;
-
-    2. transform 함수 사용(위치,각도,기울기,확대 등을 처리하는 함수)
-        - 장점 : 이동 크기 계산이 필요가 없음
-        - 단점 : 구버전 IE에서 안됨
-    3. display:flex 사용
-    4. display:grid 사용
-    */
-    transform: translate(-50%, -50%);
-}
-
-/*
-    드롭다운(drop down) 메뉴 만들기
-    - 계층형 구조이므로 list 태그로 만든다
-    - 가장 중요한 스킬은 원하는 차수의 메뉴를 선택하는 것
-
-    1차 메뉴 선택자 : .menu > li
-    2차 메뉴 선택자 : .menu > li > ul > li
-    3차 메뉴 선택자 : .menu > li > ul > li > ul > li
-
-    1차 이상 메뉴 : .menu li
-    2차 이상 메뉴 : .menu > li li
-    3차 이상 메뉴 : .menu > li > ul > li li
-
-    (1) 리스트의 모든 스타일을 제거(여백, 표시방식)
-    (2) 모든 a태그의 스타일을 제거
-    (3) 1차 메뉴의 항목들의 표시 방식(display)을 inline-block으로 변경
-    (4) 2차 이상의 메뉴(ul)들 배치 방식(position)을 absolute로 변경
-        모든 메뉴(li)는 기준점 설정을 위해 배치 방식을 relative로 변경
-    (5) 2차 이상의 메뉴(ul)를 숨김 처리
-    (6) 메뉴(li)에 마우스를 올리면(hover) 하위 메뉴를 표시
-    (7) 메뉴 항목(li)에 마우스가 올라가면(hover) 색상을 변경
-    (8) 3차 메뉴 이상은 오른쪽에 나오도록 처리
-    (9) 메뉴 내부에 글자가 많은 경우 말줄임표 처리
-    (10) 1차 메뉴 중 오른쪽 메뉴(.right-menu)에 대한 처리     
-    (11) 오른쪽 메뉴에 있는 3차 이상 메뉴에 대한 처리
-*/
-
-/* (1) */
-.menu, .menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    font-weight:bold;
-
-}
-/* (2) */
-.menu a {
-    display: block;
-    width:100%;
-    text-decoration: none;
-    color: inherit;/*바깥에 있는거 따라갈게요(상속)*/
-
-    padding: 0.5em;
-}
-/* (3) */
-.menu > li {
-    display: inline-block;
-    width:100px;
-}
-/* (4) */
-.menu > li ul {
-    position: absolute;
-    left:0;
-    top:100%;
-    width:100px;
-}
-.menu, .menu li {
-    position: relative;
-}
-/* (5) */
-.menu > li ul {
-    display: none;
-}
-/* (6) */
-.menu li:hover > ul {
-    display: block;
-}
-/* (7) */
-.menu li:hover {
-    background-color: darkgray;
-}
-/* (8) */
-.menu > li > ul > li ul {
-    top:0;
-    left:100%;
-}
-/* (9) */
-.menu a {
-    /*
-        말줄임표 3종세트
-        (전제조건) 폭이 확정적이어야 한다
-        - overflow는 넘치는 화면에 대한 처리를 설정
-        - white-space는 넘치는 항목에 대한 개행 처리를 설정
-        - text-overflow는 글자가 넘칠 경우의 처리를 설정
-    */
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-/* (10) */
-.menu > li.right-menu {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-/* (11) */
-.menu > li.right-menu > ul > li ul {
-    left: auto;
-    right:100%;
-}
 
 .valid-message {
     color: forestgreen;
@@ -682,3 +378,19 @@ input.form-input.form-input-bg {
     border-color: #cae7fd;
     filter:none;
 }
+.logo{
+	width:100px;
+	height:100px;
+	display: inline;
+}
+body{
+	background-color: #f6f6f6;
+}
+.container {
+            background-color: #ffffff;
+            border: 1px solid #ebebeb;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+            border-radius: 5px;
+            padding: 0px 50px;
+        }
