--- a/semi/src/main/resources/static/css/commons.css
+++ b/semi/src/main/resources/static/css/commons.css
@@ -315,7 +315,7 @@ a.form-btn {
     hover 서브 스타일
 */
 .table.table-hover > tbody > tr:hover {
-    background-color: black;
+    background-color: #cfd5de;
     color: white;
 }
 
