--- a/semi/src/main/resources/static/css/commons.css
+++ b/semi/src/main/resources/static/css/commons.css
@@ -469,6 +469,17 @@ input.form-input.form-input-bg {
     padding-left: 2.5em;
 }
 
+input.form-input.search {
+    background-size: auto 75%;
+    background-repeat: no-repeat;
+    background-image: url("/static/image/search.png");
+
+    background-position: right 12px center;
+
+
+    padding: 0 2.5em 0 1em;
+}
+
 /* 
     (참고) 
     z-index가 없어도 fixed가 가장 높게 나온다 
@@ -589,6 +600,7 @@ input.form-input.form-input-bg {
 }
 .menu, .menu li {
     position: relative;
+    z-index: 9999;
 }
 /* (5) */
 .menu > li ul {
@@ -600,7 +612,8 @@ input.form-input.form-input-bg {
 }
 /* (7) */
 .menu li:hover {
-    background-color: darkgray;
+/*     background-color: #f6f6f6; */
+/* 	border: 1px solid black; */
 }
 /* (8) */
 .menu > li > ul > li ul {
