--- a/semi/src/main/resources/static/css/layout.css
+++ b/semi/src/main/resources/static/css/layout.css
@@ -73,9 +73,13 @@ main {
 }
 /* 내부 영역에 기본 여백을 부여 */
 header, footer {
+	left: 0;
     padding: 1em;
-    width : 1100px;
-    height: 90px;
+    width : 100%;
+    height: 100px;
+    position:fixed;
+    z-index: 9999;
+    background-color:white;
 }
 /* section은 다단 레이아웃이 가능하도록 배치 */
 section {
@@ -88,4 +92,5 @@ article {
     flex-grow: 1;
     padding: 1em;
     min-height: 450px;
+    margin-top: 150px;
 }
