--- a/semi/src/main/resources/static/css/commons.css
+++ b/semi/src/main/resources/static/css/commons.css
@@ -407,11 +407,11 @@ a.link:hover {
     text-align: center;
 }
 .pagination > a.on {
-    color:red;
+    color: rgb(64, 165, 187);
     font-weight: bolder;
 }
 .pagination > a:hover:not(.disabled) {
-    color:red;
+    color: rgb(64, 165, 187);
     font-weight: bolder;
     text-decoration: underline;
 }
