회원가입 페이지 : 프로필 미리보기 기능 추가 _개인정보 변경페이지 우편주소 지우기

--- a/semi/src/main/resources/static/css/commons.css
+++ b/semi/src/main/resources/static/css/commons.css
@@ -182,6 +182,7 @@ a.form-btn {
 .w-60 {width:60%;}
 .w-50 {width:50%;}
 .w-40 {width:40%;}
+.w-38 {width:38.7%;}
 .w-33 {width:33.3333%;}
 .w-30 {width:30%;}
 .w-25 {width:25%;}
