--- a/semi/src/main/resources/static/css/commons.css
+++ b/semi/src/main/resources/static/css/commons.css
@@ -180,6 +180,7 @@ a.form-btn {
 .w-75 {width:75%;}
 .w-70 {width:70%;}
 .w-60 {width:60%;}
+.w-55 {width:55%;}
 .w-50 {width:50%;}
 .w-40 {width:40%;}
 .w-38 {width:38.7%;}
@@ -234,6 +235,8 @@ a.form-btn {
 .ms-30 { margin-left: 30px; }
 .ms-40 { margin-left: 40px; }
 .ms-50 { margin-left: 50px; }
+.ms-60 { margin-left: 60px; }
+.ms-70 { margin-left: 70px; }
 
 .me-10 { margin-right: 10px; }
 .me-20 { margin-right: 20px; }
