--- a/semi/src/main/resources/static/css/layout.css
+++ b/semi/src/main/resources/static/css/layout.css
@@ -43,6 +43,7 @@
     display: flex;
     width : 1100px;
     height: 90px;
+    margin: 0 auto;
 }
 .inline-flex-box {
     display: inline-flex;
@@ -68,7 +69,7 @@
 
 /* main을 제어해서 홈페이지 전체 폭과 정렬을 제어 */
 main {
-    width:1100px;
+    width:100%;
     margin:0 auto;
 }
 /* 내부 영역에 기본 여백을 부여 */
