write edit 수정, listTotal 수정

--- a/semi/src/main/resources/static/css/reset.css
+++ b/semi/src/main/resources/static/css/reset.css
@@ -40,3 +40,10 @@ body {
 html {
     font-family: 'Noto Sans KR', sans-serif;
 }
+
+/* h1 { font-size: 2em !important; } */
+/* h2 { font-size: 1.5em !important; } */
+/* h3 { font-size: 1.17em !important; } */
+/* h4 { font-size: 1em !important; } */
+/* h5 { font-size: 0.83em !important; } */
+/* h6 { font-size: 0.67em !important; } */
